сделал метод возврата участников чата + дока для него
